GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/Related_Contact__c.object-meta.xml
<CustomObject>
    <label>Related Contact</label>
    <nameField>
        <label>Related Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>