GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/fields/Department_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Contact_Name__c</fullName>
    <label>Department Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>