GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/fields/Department_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Department_Contact_Phone__c</fullName>
    <label>Department Contact Phone</label>
    <type>Phone</type>
</CustomField>