GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/fields/Intake_Request__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>