GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/fields/npi__c.field-meta.xml
<CustomField>
    <fullName>npi__c</fullName>
    <label>npi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>