GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/fields/Provider_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contact_Name__c</fullName>
    <label>Provider Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>