GloablServices/keshavglobal/force-app/main/default/objects/Related_Contact__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>